<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.foodtip.View.Home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_page" />
    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.foodtip.View.User.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/user" />
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.foodtip.View.Search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/searchview" />
</navigation>