<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">
    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="149dp"
            android:layout_height="187dp"
            android:layout_marginHorizontal="100dp"
            android:layout_marginStart="128dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/user_login_DescriptionContent"
            android:scaleType="center"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/user_login" />

        <EditText
            android:id="@+id/UserNameEditTextLogIn"
            android:layout_width="264dp"
            android:layout_height="50dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="49dp"
            android:ems="12"
            android:hint="@string/Username"
            android:inputType="text"
            android:text=""
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            tools:ignore="MissingConstraints"
            android:autofillHints="username" />


        <EditText
            android:id="@+id/PasswordEditTextLogIn"
            android:layout_width="264dp"
            android:layout_height="50dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="40dp"
            android:ems="16"
            android:hint="@string/Password"
            android:text=""
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:autofillHints="password" />
        <Button
            android:id="@+id/forgotPasswordButton"
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:layout_marginStart="195dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_login_style"
            android:text="@string/forgotPassword"
            android:onClick="forgotPasswordButtonOnClickListener"
            android:textColor="@android:color/holo_purple" />
        <Button
            android:id="@+id/loginButton"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_login_style"
            android:text="@string/Login"
            android:onClick="LogInButtonOnClickListener"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/forgotPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="40dp"
            android:text="@string/noRegisterTextView"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:shadowColor="@color/black"
            tools:layout_editor_absoluteX="166dp"
            tools:layout_editor_absoluteY="599dp" />
        <Button
            android:id="@+id/RegisterButton"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_login_style"
            android:text="@string/RegisterButtonText"
            android:onClick="RegisterButtonOnClickListener"
            android:textColor="@android:color/white" />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>