<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <LinearLayout
        android:id="@+id/RegisterLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245"
        tools:layout_editor_absoluteX="0dp">


        <TextView
            android:id="@+id/RegisterTextView"
            android:layout_width="230dp"
            android:layout_height="70dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="20dp"
            android:text="@string/RegisterTextView"
            android:textSize="50sp"
            android:textColor="@android:color/black"
            android:shadowColor="@color/black"
            tools:layout_editor_absoluteX="166dp"
            tools:layout_editor_absoluteY="599dp" />

        <EditText
            android:id="@+id/UserNameREGISTER"
            android:layout_width="264dp"
            android:layout_height="50dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="49dp"
            android:ems="12"
            android:hint="@string/Username"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            tools:ignore="MissingConstraints"
            android:autofillHints="username" />


        <EditText
            android:id="@+id/PasswordREGISTER"
            android:layout_width="264dp"
            android:layout_height="50dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="40dp"
            android:ems="16"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:autofillHints="password" />

        <EditText
            android:id="@+id/RepeatPasswordREGISTER"
            android:layout_width="264dp"
            android:layout_height="50dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="40dp"
            android:ems="16"
            android:hint="@string/RepeatPassword"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:autofillHints="password" />

        <Button
            android:id="@+id/registerButtonREGISTER"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_login_style"
            android:text="@string/RegisterTextView"
            android:onClick="onClickRegisterButtonREGISTER"
            android:textColor="@android:color/white" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>